openshift/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test-project
  name: admin-pod
  labels:
    app: test-project
    type: spring-boot
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: admin
    spec:
      serviceAccountName: admin
      containers:
        - image: joshiste/admin:sio-bcn
          imagePullPolicy: Never
          name: admin
          ports:
            - containerPort: 8080
          resources: {}
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 5
      restartPolicy: Always
  selector:
    matchLabels:
      app: admin
