openshift/admin-ingress.yaml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: spring-boot-sba-demo
spec:
  rules:
    - host: admin.workshop.demo
      http:
        paths:
          - path: /
            backend:
              serviceName: admin-service
              servicePort: 8080
